--- a/.github/workflows/main_cloudtest.yml
+++ b/.github/workflows/main_cloudtest.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP app to Azure Web App - cloudtest
+name: Deploy Static Content to Azure Web App - amaflix
 
 on:
   push:
@@ -10,51 +10,22 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy_static: # Simplified job name, as no 'build' is needed for static files
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup MSBuild path
-        uses: microsoft/setup-msbuild@v1.0.2
-
-      - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1.0.5
-
-      - name: Restore NuGet packages
-        run: nuget restore
-
-      - name: Publish to folder
-        run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: ASP-app
-          path: '/published/**'
-
-  deploy:
-    runs-on: windows-latest
-    needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: ASP-app
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4FD6FF1C435A46E3B0E4B6969BEAA486 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F8048CF7EDA64194887CF984922A4B03 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_babcf984-ebaf-4259-a489-aa3c368ea0ed }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_63B97EF453884C32BBCBFFAF9917CB75 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -62,6 +33,7 @@ jobs:
         with:
           app-name: 'cloudtest'
           slot-name: 'Production'
+          # 'package: .' tells the action to deploy everything from the root of your repo directly
           package: .
 
-          
+
